[build-system]
requires = ["setuptools>=61.0.0,<69.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mor-api-services"
version = "0.0.1"
description = "Melding Openbare Ruimte API Services for django app"
readme = "README.md"
license = {file = "LICENSE.MD"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: EUPL License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2.15",
    "requests>=2.29.0",
]

[project.urls]
Repository = "https://github.com/forza-mor-rotterdam/mor-api-services"